--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "keywords": [
     "hello-world"
   ],
-  "bin": {"greet": "./bin/greet.js"},
+  "bin": {
+    "greet": "./bin/greet.js"
+  },
   "author": "Mr. Wiredancer",
   "license": "MIT",
   "devDependencies": {
     "mocha": "^1.18.2"
+  },
+  "dependencies": {
+    "minimist": "0.0.8"
   }
 }
